Fix the button position on mobile device resolution

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -139,6 +139,9 @@ body{
 
 
 .button.style4 {
+
+
+
     /* Position the button at the bottom */
     position: absolute;
     bottom: 0;
@@ -172,14 +175,15 @@ body{
 }
 
 .card-div:hover .like-icon-div {
-    transform: translatey(-270%) scale(1.5);
+    transform: translatey(-190%) scale(1.5);
     width: 70%;
     align-items: center;
+    vertical-align: top;
     align-content: center;
-    
+    height: 14%;
 
     border-radius: 10px;
-    z-index: 999; /* Render on top of everything */
+    z-index: 1999; /* Render on top of everything */
 
     transition: 
     transform 0.3s ease,
@@ -194,12 +198,13 @@ body{
     left: 50%; /* Center horizontally */
     transform: translateX(-50%)  translate(0, 105%);
     transition: transform 0.3s ease;
-    z-index: 999; /* Render on top of everything */
+    z-index: 3999; /* Render on top of everything */
 }
 
 /* ======== text Container Styling general ======== */
 
 .text-container{
+   
     width: 100%;
     height: 5%;
     display: flex;
@@ -216,9 +221,9 @@ body{
     text-align: center;
     
     background-color: var(--card-main-color);
-    z-index: 1; /* Render on top of everything */
-
+    
     transition: transform 0.3s ease;
+    z-index: 1; /* Render on top of everything */
 }
 
 .text-container .date{
@@ -265,7 +270,7 @@ body{
     white-space: nowrap;
     text-overflow: ellipsis;
     height: 100px;
-    transform: translate(0, 250%);
+    transform: translate(0, -150%);
     z-index: 999; /* Render on top of everything */
     transition: transform 0.3s ease;
 }
@@ -286,22 +291,33 @@ body{
 .card-div:hover .img-div img{
     transform: translateY(17.5%) scale(1.3);
     
+    z-index: 199; /* Render on top of everything */
     transition: transform 0.3s ease-in-out
 }
 
 .card-div:hover{
-    transform: translate(0, -10px);
+    transform: translate(0, -10px) scaleY(1.1);
     transition: transform 0.3s ease;
+}
+
+.card-div:hover .card-div-parent{
+    position: relative;
+    background-color: transparent;
+    transform: scaleY(.9);
+    transition: transform 0.3s ease;
+    margin-top: auto;
 }
 
 
 .button.style4:hover {
     color: #c2b2ab; /* Hover color (adjust as needed) */
     background-color: #212121;
+    z-index: 1299;
 }
 
 
 .card-div:hover .text-container{
-
     justify-content: flex-end;
+    margin-top: auto; /* Align button to the bottom */
+    transform-origin: bottom;
 }
